After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749330 - at-spi2-core void functions return values causing compilation failure
at-spi2-core void functions return values causing compilation failure
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-core
2.15.x
Other Solaris
: Normal normal
: ---
Assigned To: At-spi maintainer(s)
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-05-13 18:46 UTC by Shawn Walker
Modified: 2015-05-20 02:55 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Shawn Walker 2015-05-13 18:46:19 UTC
Some of the functions in at-spi2-core are declared 'static void' but still attempt to return values:

at-spi2-core/at-spi2-core-2.16.0/registryd/deviceeventcontroller.c, line 207: void function cannot return value
at-spi2-core/at-spi2-core-2.16.0/registryd/deviceeventcontroller.c, line 219: void function cannot return value

This is with at-spi2-core-2.16.0.
Comment 1 Mike Gorse 2015-05-20 02:55:34 UTC
Fix pushed to master: 942b1b

Thanks for the report.