Void functions shouldn't try to return values

https://bugzilla.gnome.org/show_bug.cgi?id=749330